--- a/Bab/bab2.tex
+++ b/Bab/bab2.tex
@@ -771,7 +771,7 @@ Penelitian untuk mencari penempatan sensor visual secara optimal telah dilakukan
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.4]{fieldofviewhorster}
-	\caption[Pemodelan daerah cakupan kamera]{Pemodelan daerah cakupan kamera}
+	\caption[Pemodelan daerah cakupan kamera pada penelitian terkait]{Pemodelan daerah cakupan kamera pada penelitian terkait}
 	\label{fig:fieldofviewhorster}
 \end{figure}
 Pada penelitian ini, daerah cakupan kamera dimodelkan dalam bentuk segitiga seperti pada gambar~\ref{fig:fieldofviewhorster}. Kamera ditempatkan pada posisi \(c_x,c_y\) dan menghadap ke arah \(\varphi\). Untuk mendapatkan daerah cakupan kamera, mulanya kamera ditranslasi ke titik \textit{origin} pada sistem koordinat:
