--- a/Bab/bab3.tex
+++ b/Bab/bab3.tex
@@ -1,7 +1,7 @@
 \chapter{Analisis}
-Pada bagian ini, masalah akan dianalisi lebih lanjut. Awalnya, masalah akan dimodelkan terlebih dahulu sebelum diselesaikan. Hasil dari pemodelan masalah akan digunakan untuk membentuk model masalah \textit{binary integer programming}~(\ref{sec:bip}) yang akan diselesaikan menggunakan algoritma \textit{Balas's additive}~(\ref{balas_additive}). Dengan model masalah \textit{binary integer programming}, solusi optimal masalah dapat ditemukan, yaitu solusi berupa penempatan kamera CCTV yang berjumlah minimum yang dapat mencakup seluruh isi ruangan. Selanjutnya, pemodelan dan penyelesaian tersebut akan digunakan untuk merancang perangkat lunak yang dapat menerima masalah ini dan menyelesaikannya. Setiap kebutuhan perangkat lunak yang terdiri dari masukan, keluaran, dan kelas-kelas akan dibahas lebih lanjut pada bagian analisis kebutuhan perangkat lunak.
+Pada bagian ini, masalah akan dianalisis lebih lanjut. Awalnya, masalah akan dimodelkan terlebih dahulu sebelum diselesaikan. Hasil dari pemodelan masalah akan digunakan untuk membentuk model masalah \textit{binary integer programming}~(\ref{sec:bip}) yang akan diselesaikan menggunakan algoritma \textit{Balas's additive}~(\ref{balas_additive}). Dengan model masalah \textit{binary integer programming}, solusi optimal masalah dapat ditemukan, yaitu solusi berupa penempatan kamera CCTV yang berjumlah minimum yang dapat mencakup seluruh isi ruangan. Selanjutnya, pemodelan dan penyelesaian tersebut akan digunakan untuk merancang perangkat lunak yang dapat menerima masalah ini dan menyelesaikannya. Setiap kebutuhan perangkat lunak yang terdiri dari masukan, keluaran, dan kelas-kelas akan dibahas lebih lanjut pada bagian analisis kebutuhan perangkat lunak.
 
-\section{Pemodelan Masalah}
+\section{Analisis Pemodelan Masalah}
 Masalah yang dibahas pada penelitian ini perlu dimodelkan terlebih dahulu agar menjadi konkret. Pemodelan masalah terdiri dari pemodelan ruangan, kamera CCTV, dan cakupan kamera CCTV. Pemodelan yang dilakukan pada penelitian sebelumnya~(\ref{penelitian_horster}) akan diterapkan kembali pada penelitian ini dengan adanya modifikasi. Modifikasi dilakukan pada pemodelan ruangan dan pemodelan cakupan kamera CCTV. Sebelumnya, ruangan dimodelkan menggunakan \textit{grid point} sehingga suatu bagian daerah dalam ruangan dinyatakan dalam bentuk titik. Sedangkan pada penelitian ini, suatu bagian dalam ruangan dinyatakan dalam bentuk \textit{cell}. Modifikasi pemodelan ruangan turut disertai dengan modifikasi pemodelan daerah cakupan kamera CCTV. Sebelumnya, cakupan kamera CCTV terdiri dari kumpulan titik. Namun, karena suatu daerah dalam ruangan dinyatakan dalam bentuk \textit{cell}, maka cakupan kamera CCTV pada penelitian ini berubah sehingga terdiri dari kumpulan \textit{cell}.
 
 %Masalah yang dibahas di skripsi ini perlu dirumuskan terlebih dahulu agar dapat diselesaikan. Masalah akan dipecah menjadi beberapa elemen sehingga fungsi dari setiap elemen dapat dipahami lebih mudah. Setiap elemen akan memiliki keterhubungan satu dengan yang lainnya sehingga apabila disatukan akan merepresentasikan masalah yang dibahas. Dengan merumuskan masalah, maka masalah dapat dimodelkan menjadi elemen-elemen yang dapat dipahami secara konkret baik bagi penulis maupun pembaca.
@@ -253,7 +253,7 @@ Perhitungan tingkat \textit{overlap} dan \textit{out of bound} dapat dilakukan d
 %Setiap cell dalam ruangan memiliki ukuran yang sama dengan cell-cell lainnya. Panjang harizontal dan vertikal dari cell tidak selalu berukuran sama sehingga cell dapat berbentuk persegi panjang. Penentuan ukuran cell merupakan bagian yang akan diteliti pada bagian eksperimen.
 
 
-\section{Penyelesaian Masalah}
+\section{Analisis Penyelesaian Masalah Menggunakan \textit{Binary Integer Programming}}
 Setelah memodelkan masalah, masalah akan dimodelkan ke dalam bentuk masalah \textit{binary integer programming}. Solusi yang diharapkan dari masalah ini adalah penempatan-penempatan kamera CCTV yang berjumlah minimum yang dapat mencakup seluruh isi ruangan. Berdasarkan pemodelan masalah, ruangan telah dibagi ke dalam matriks \textit{cell} sehingga solusi penempatan kamera CCTV harus mencakup seluruh \textit{cell} dalam ruangan. 
 Untuk mendapatkan solusi tersebut, akan dibangun seluruh kemungkinan penempatan kamera CCTV. Dari setiap kemungkinan tersebut, akan dipilih penempatan-penempatan kamera CCTV berjumlah minimum yang dapat mencakup seluruh \textit{cell} dalam ruangan. Pemilihan dapat dilakukan dengan memeriksa seluruh kombinasi kemungkinan penempatan hingga didapatkan kombinasi yang sesuai dengan kriteria solusi. Namun, metode ini bukan merupakan metode efisien karena bersifat \textit{exhaustive search} sehingga dibutuhkan metode lainnya yang dapat mencari kombinasi penempatan kamera CCTV tanpa melibatkan \textit{exhaustive search}. Salah satu metodenya adalah memodelkan masalah ke dalam bentuk masalah \textit{binary integer programming} dan menyelesaikannya menggunakan algoritma \textit{Balas's additive}. Pada~\ref{balas_additive} telah dibahas bagaimana algoritma ini dapat menyelesaikan masalah \textit{binary integer programming} secara efisien tanpa melibatkan \textit{exhaustive search}. Dengan demikian, solusi dari masalah ini dapat ditemukan dengan memodelkan masalah ke dalam bentuk masalah \textit{binary integer programming} dan menyelesaikannya menggunakan algoritma Balas's additive.
 
