--- a/Bab/bab6.tex
+++ b/Bab/bab6.tex
@@ -7,15 +7,15 @@ Berdasarkan penelitian yang telah dilakukan, terdapat beberapa hal yang dapat di
 	
 	\item Pemodelan masalah ini ke dalam bentuk masalah \textit{binary integer programming} dapat diselesaikan menggunakan algoritma \textit{Balas's additive}. Karena masalah ini dapat dimodelkan ke dalam bentuk masalah \textit{binary integer programming}, maka solusi masalah berupa penempatan kamera CCTV yang berjumlah minimum yang dapat mencakup seluruh isi ruangan dapat ditemukan dengan menggunakan algoritma \textit{Balas's additive}.
 	
-	\item Perangkat lunak untuk menyelesaikan masalah ini dapat menerima masukan masalah dan menghasilkan solusinya. Perangkat lunak ini telah menerapkan hasil analisis pemodelan dan penyelesaian masalah sehingga solusi dari perangkat lunak ini merupakan solusi penempatan kamera CCTV yang berjumlah minimum yang dapat mencakup seluruh isi ruangan. Solusi ini ditampilkan perangkat lunak melalui visualisasi pada tampilan antarmuka grafis sehingga penempatan-penempatan kamera CCTV dapat dipahami dengan lebih mudah.
+	\item Perangkat lunak yang berguna untuk menyelesaikan masalah ini dapat menerima masukan masalah dan menghasilkan solusinya. Perangkat lunak ini telah menerapkan hasil analisis pemodelan dan penyelesaian masalah sehingga solusi dari perangkat lunak ini merupakan solusi penempatan kamera CCTV yang berjumlah minimum yang dapat mencakup seluruh isi ruangan. Solusi ini ditampilkan perangkat lunak melalui visualisasi pada tampilan antarmuka grafis sehingga penempatan-penempatan kamera CCTV dapat dipahami dengan lebih mudah.
 	
-	\item Pengujian pertama menghasilkan kesimpulan bahwa ukuran ruangan memiliki hubungan dengan ukuran model masalah \textit{binary integer programming}. Berdasarkan eksperimen yang dilakukan, didapati bahwa apabila ukuran ruangan semakin besar, maka ukuran model masalah \textit{binary integer programming} juga akan semakin besar.
+	\item Pengujian pertama yang dilakukan menghasilkan kesimpulan bahwa ukuran ruangan memiliki hubungan dengan ukuran model masalah \textit{binary integer programming}. Berdasarkan eksperimen yang dilakukan, didapati bahwa apabila ukuran ruangan semakin besar, maka ukuran model masalah \textit{binary integer programming} juga akan semakin besar.
 	
-	\item Pengujian kedua menghasilkan kesimpulan bahwa solusi optimal yang didapatkan dengan menggunakan algoritma \textit{Balas's additive} dapat ditemukan tanpa perlu memeriksa seluruh \(2^n\) kemungkinan solusi. Hal ini menandakan bahwa penyelesaian masalah \textit{binary integer programming} menggunakan algoritma \textit{Balas's additive} merupakan metode yang efisien karena tidak melibatkan \textit{exhaustive search}.
+	\item Pengujian kedua yang dilakukan menghasilkan kesimpulan bahwa solusi optimal yang didapatkan dengan menggunakan algoritma \textit{Balas's additive} dapat ditemukan tanpa perlu memeriksa seluruh \(2^n\) kemungkinan solusi. Hal ini menandakan bahwa penyelesaian masalah \textit{binary integer programming} menggunakan algoritma \textit{Balas's additive} merupakan metode yang efisien karena tidak melibatkan \textit{exhaustive search}.
 \end{enumerate}
 
 \section{Saran}
-Terdapat beberapa saran untuk pengembangan penelitian ini lebih lanjut, yaitu:
+Terdapat beberapa saran untuk melakukan pengembangan penelitian ini lebih lanjut, yaitu:
 \begin{enumerate}
 	\item Pemodelan masalah yang dilakukan pada penelitian ini masih dibatasi pada bidang 2 dimensi sehingga pemodelan masalah dapat dikembangkan lebih lanjut pada bidang 3 dimensi.
 	\item Ruangan yang digunakan dalam penelitian ini berbentuk sederhana (persegi panjang) tanpa adanya penghalang di dalamnya. Ruangan ini dapat dikembangkan lebih lanjut sehingga dapat berbentuk selain persegi panjang dan/atau memiliki suatu penghalang di dalamnya.
