--- a/dosen.tex
+++ b/dosen.tex
@@ -69,7 +69,7 @@
 \newcommand{\MTA}{Mariskha\,Tri\,Adithia,\,P.D.Eng}
 \newcommand{\LCA}{Luciana\,Abednego,\,M.T.}
 \newcommand{\ELH}{Elisati\,Hulu,\,M.T.}
-% * \newcommand{\CHW}{Chandra\,Wijaya,\,M.T.}
+\newcommand{\CHW}{Chandra\,Wijaya,\,M.T.}
 \newcommand{\GDK}{Gede\,Karya,\,M.T.,\,CISA}
 \newcommand{\NIS}{Nico\,Saputro,\,M.T.}
 % * \newcommand{\JNH}{Joanna\,Helga,\,M.Sc.}
@@ -79,3 +79,4 @@
 % * \newcommand{\ABS}{Aditya\,Bagoes\,Saputra,\,M.T.} 
 \newcommand{\CLF}{Claudio\,Franciscus,\,M.T.} 
 % * \newcommand{\NAT}{Natalia,\,M.Si.} 
+\newcommand{\KDH}{Kristopher\,David\,Harjono,\,M.T.}
