--- a/Lampiran/lampA.tex
+++ b/Lampiran/lampA.tex
@@ -44,13 +44,16 @@
 
 %\lstinputlisting[language=Java, caption=MyCode.java]{./Lampiran/MyCode.java} 
 
-%\lstinputlisting[language=Java, caption=Angle.java]{./Lampiran/Angle.java} 
-%\lstinputlisting[language=Java, caption=Point.java]{./Lampiran/Point.java} 
-%\lstinputlisting[language=Java, caption=CameraSpecification.java]{./Lampiran/CameraSpecification.java} 
-%\lstinputlisting[language=Java, caption=CameraPlacement.java]{./Lampiran/CameraPlacement.java} 
-%\lstinputlisting[language=Java, caption=Dimension.java]{./Lampiran/Dimension.java} 
-%\lstinputlisting[language=Java, caption=Cell.java]{./Lampiran/Cell.java}
-%\lstinputlisting[language=Java, caption=GridPoint.java]{./Lampiran/GridPoint.java} 
-%\lstinputlisting[language=Java, caption=Room.java]{./Lampiran/Room.java} 
-%\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolver.java]{./Lampiran/MinimumCameraPlacementSolver.java} 
-%\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolverLPSolve.java]{./Lampiran/MinimumCameraPlacementSolverLPSolve.java} 
+\lstinputlisting[language=Java, caption=Angle.java]{./Lampiran/Angle.java} 
+\lstinputlisting[language=Java, caption=Point.java]{./Lampiran/Point.java} 
+\lstinputlisting[language=Java, caption=CameraSpecification.java]{./Lampiran/CameraSpecification.java} 
+\lstinputlisting[language=Java, caption=CameraPlacement.java]{./Lampiran/CameraPlacement.java} 
+\lstinputlisting[language=Java, caption=Dimension.java]{./Lampiran/Dimension.java}
+\lstinputlisting[language=Java, caption=Cell.java]{./Lampiran/Cell.java}
+\lstinputlisting[language=Java, caption=CellMatrix.java]{./Lampiran/CellMatrix.java}
+\lstinputlisting[language=Java, caption=Room.java]{./Lampiran/Room.java} 
+\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolver.java]{./Lampiran/MinimumCameraPlacementSolver.java} 
+\lstinputlisting[language=Java, caption=MinimumCameraPlacementSolverBalasAdditive.java]{./Lampiran/MinimumCameraPlacementSolverBalasAdditive.java} 
+\lstinputlisting[language=Java, caption=Variable.java]{./Lampiran/Variable.java} 
+\lstinputlisting[language=Java, caption=BIPFunction.java]{./Lampiran/BIPFunction.java} 
+\lstinputlisting[language=Java, caption=BIPConstraint.java]{./Lampiran/BIPConstraint.java} \lstinputlisting[language=Java, caption=BIPProblem.java]{./Lampiran/BIPProblem.java} \lstinputlisting[language=Java, caption=BIPFeasibilityCheckResult.java]{./Lampiran/BIPFeasibilityCheckResult.java} \lstinputlisting[language=Java, caption=Node.java]{./Lampiran/Node.java} \lstinputlisting[language=Java, caption=NodeStatus.java]{./Lampiran/NodeStatus.java} \lstinputlisting[language=Java, caption=BalasAdditiveBIPSolver.java]{./Lampiran/BalasAdditiveBIPSolver.java} \lstinputlisting[language=Java, caption=BalasAdditiveBIPSolverResult.java]{./Lampiran/BalasAdditiveBIPSolverResult.java} 
